<?xml version="1.0"?>
<package format="2">
  <name>rct_optimizations</name>
  <version>0.2.0</version>
  <description>The rct_optimizations package</description>

  <maintainer email="jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <author email="jmeyer1292@gmail.com">Jonathan Meyer</author>

  <!-- The code in this package is lifted heavily from the work of Chris Lewis and the
  efforts of Geoffrey Chiou on behalf of SwRI to create simpler, more contained
  tools -->
  <author>Geoffrey Chiou</author>
  <author email="clewis@swri.org">Chris Lewis</author>

  <license>Apache 2.0</license>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>rct_common</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
