<?xml version="1.0"?>
<package format="2">
  <name>rct_ros_tools</name>
  <version>0.2.0</version>
  <description>The rct_ros_tools package</description>

  <author email="jmeyer1292@gmail.com">Jon Meyer</author>
  <maintainer email="jmeyer1292@gmail.com">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>rct_common</depend>
  <depend>rct_image_tools</depend>
  <depend>rct_optimizations</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>yaml-cpp</depend>

  <export>
    <rct_ros_tools plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
